# habit-tracker

./: .gitignore  Makefile  README.md  pyproject.toml
habit_tracker/: __main__.py
habit_tracker/cli/: app.py  keys.py  navigation.py  renderer.py
habit_tracker/cli/screens/: add_habit.py  all_habits.py  analytics_menu.py  analytics_overview.py  analytics_streaks.py  analytics_struggling.py  check_off.py  completion_history.py  dashboard.py  deactivate_confirm.py  edit_habit.py  greeting.py  habit_detail.py  placeholder.py  skip_day_confirm.py
habit_tracker/db/: engine.py  schema.py
habit_tracker/domain/: completion.py  habit.py  habit_status.py  periodicity.py
habit_tracker/fixtures/: test_data.py
habit_tracker/repositories/: completion_repository.py  habit_repository.py
habit_tracker/services/: exceptions.py  habit_service.py  streak_calculator.py
habit_tracker/time_provider/: fake.py  protocol.py  real.py  test_mode.py
tests/: conftest.py
tests/test_cli/: helpers.py  test_navigation.py
tests/test_cli/test_screens/: test_add_habit.py  test_all_habits.py  test_analytics.py  test_check_off.py  test_dashboard.py  test_deactivate_confirm.py  test_edit_habit.py  test_greeting.py  test_habit_detail.py  test_skip_day.py
tests/test_domain/: test_completion.py  test_habit.py
tests/test_fixtures/: test_test_data.py
tests/test_repositories/: test_completion_repository.py  test_habit_repository.py
tests/test_services/: test_analytics_service.py  test_habit_service.py
tests/test_time_provider/: test_time_provider.py
